fix contrast

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -11,7 +11,7 @@
 }
 
 .privacy-policy {
-  color: white;
+  color: black;
   text-decoration: none;
   font-size: 16px;
 }
